--- a/build.yaml
+++ b/build.yaml
@@ -16,7 +16,7 @@ kind: Build
 metadata:
   name: python-build
 spec:
-  serviceAccountName: knative-build
+  serviceAccountName: build-bot
   source:
     git:
       url: https://github.com/ddiiwoong/hello-python.git
@@ -26,4 +26,4 @@ spec:
     image: gcr.io/kaniko-project/executor:v0.1.0
     args:
     - --dockerfile=/workspace/Dockerfile
-    - --destination=gcr.io/cloudrun-237814/hello-python
+    - --destination=docker.io/ddiiwoong/hello-python:latest
