--- a/sa.yaml
+++ b/sa.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: knative-build
+  name: build-bot
 secrets:
-- name: knative-build-auth
+  - name: basic-user-pass
